--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="https://app.finsmart.pe/assets/logos/small.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>credit-guru</title>
     <!-- Metaetiquetas Open Graph (para Slack, Facebook, etc.) -->
     <meta property="og:title" content="Credit Guru - CGH Project">
     <meta property="og:description" content="Optimiza tu crédito con Credit Guru.">
-    <meta property="og:url" content="https://cgh-test.netlify.app/">
-    <meta property="og:image" content="https://cgh-test.netlify.app/og-image.png">
-    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://app.finsmart.pe/assets/logos/small.png" />
   </head>
 
   <body>
